--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,33 +1,40 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="grid grid-cols-12 gap-4">
-
+<form
+  [formGroup]="form"
+  (ngSubmit)="onSubmit()"
+  class="grid grid-cols-12 gap-4"
+>
   @for (attr of fields; track attr.name) {
+    @if (attr.input?.type === "text") {
+      <span>{{ attr | json }}ddddd</span>
+      <span>{{ attr.input?.value }}ddddd</span>
+      <div [class]="attr.input?.class ?? 'col-span-12'">
+        <label>{{ attr.label }}</label>
+        <input [formControlName]="attr.name" type="text" class="input" />
+      </div>
+    }
 
-  @if (attr.input?.type === 'text') {
-  <div [class]="attr.input?.class ?? 'col-span-12'">
-    <label>{{ attr.label }}</label>
-    <input [formControlName]="attr.name" type="text" class="input" />
-  </div>
-  }
+    @if (attr.input?.type === "password") {
+      <div [class]="attr.input?.class ?? 'col-span-12'">
+        <label>{{ attr.label }}</label>
+        <input
+          [formControlName]="attr.name"
+          type="password"
+          class="input"
+          [value]="attr.input?.value"
+        />
+      </div>
+    }
 
-  @if (attr.input?.type === 'password') {
-  <div [class]="attr.input?.class ?? 'col-span-12'">
-    <label>{{ attr.label }}</label>
-    <input [formControlName]="attr.name" type="password" class="input" />
-  </div>
-  }
-
-  @if (attr.input?.type === 'select') {
-  <div [class]="attr.input?.class ?? 'col-span-12'">
-    <label>{{ attr.label }}</label>
-    <select [formControlName]="attr.name" class="input">
-      @for (opt of getSelectOptions(attr.input!) ; track $index) {
-      <option [value]="opt.value">{{ opt.label }}</option>
-      }
-    </select>
-
-  </div>
-  }
-
+    @if (attr.input?.type === "select") {
+      <div [class]="attr.input?.class ?? 'col-span-12'">
+        <label>{{ attr.label }}</label>
+        <select [formControlName]="attr.name" class="input">
+          @for (opt of getSelectOptions(attr.input!); track $index) {
+            <option [value]="opt.value">{{ opt.label }}</option>
+          }
+        </select>
+      </div>
+    }
   }
 
   <div class="col-span-12">
