feat: refactor logout method and enhance session management in AuthService; add fetchData and refreshSession methods in CarroTableComponent

--- a/src/app/pages/carro/table/carro-table.component.html
+++ b/src/app/pages/carro/table/carro-table.component.html
@@ -1,5 +1,10 @@
 <app-table [model]="model"></app-table>
+<button (click)="fetchData()">Refetch</button>
 <br />
 <br />
 <br />
 <button (click)="logOut()">Cerrar sesion</button>
+<br />
+<br />
+<br />
+<button (click)="refreshSession()">Refrescar sesion</button>
